Fix code overflow-x & change tags & update languages

--- a/source/less/_partial/code.less
+++ b/source/less/_partial/code.less
@@ -11,6 +11,7 @@ pre {
     border-radius: 2px;
     line-height: 1.1em;
     background-color: @color-code-background;
+    overflow-x: auto;
 
     table, tr, td {
         width: 100%;
